Keep Stage 20L invariant evidence ordered